align fixes in responsive design

--- a/src/style/AboutMe.css
+++ b/src/style/AboutMe.css
@@ -46,3 +46,10 @@
     margin: 0 auto; 
   }
 }
+
+@media screen and (max-width: 450px) {
+  .about-me {
+    padding: 5rem 0 0;
+    max-width: 95%;
+  }
+}
