--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -77,3 +77,20 @@
     margin: 0 auto;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .home-page {
+    padding: 5rem 0 0;
+    max-width: 95%;
+  }
+
+  .home-page__download {
+    color: #04151f9b;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-left: 10%;
+    margin: 0 auto;
+  }
+}
