--- a/src/style/SkillCard.css
+++ b/src/style/SkillCard.css
@@ -75,4 +75,8 @@
   html {
     font-size: 70%;
   }
+
+  .skill-card__container p:nth-child(2) {
+    margin-right: 10%;
+  }
 }
